fix: arruma segmentacao de cliente